--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "path": "~0.4.9",
     "gulp-util": "~2.2.0",
     "underscore": "~1.5.2",
-    "backbone": "~1.1.0"
+    "backbone": "~1.1.0",
+    "gulp-less": "~1.0.2"
   }
 }
