--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "collab-web",
   "dependencies": {
-    "gulp": "~3.2.0",
-    "gulp-browserify": "~0.1.2",
-    "gulp-concat": "~2.1.4",
-    "event-stream": "~3.0.20",
-    "path": "~0.4.9",
-    "gulp-util": "~2.2.0",
+    "gulp": "~3.4.0",
+    "gulp-browserify": "~0.3.3",
+    "gulp-concat": "~2.1.7",
+    "gulp-less": "~1.1.10",
     "underscore": "~1.5.2",
     "backbone": "~1.1.0",
-    "gulp-less": "~1.0.2"
+    "highlight.js": "~8.0.0"
   }
 }
