--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "collab-web",
   "dependencies": {
-    "gulp": "~3.4.0",
-    "gulp-util": "2.2.12",
-    "gulp-browserify": "~0.3.3",
-    "gulp-concat": "~2.1.7",
-    "gulp-less": "~1.1.10",
-    "underscore": "~1.5.2",
-    "backbone": "~1.1.0",
-    "highlight.js": "~8.0.0"
+    "gulp": "~3.6.1",
+    "gulp-util": "~2.2.14",
+    "gulp-browserify": "~0.5.0",
+    "gulp-concat": "~2.2.0",
+    "gulp-less": "~1.2.3",
+    "underscore": "~1.6.0",
+    "backbone": "~1.1.2",
+    "highlight.js": "~8.0.0",
+    "event-stream": "~3.1.2"
   }
 }
